tests/baselines/reference/memberOverride.errors.txt
memberOverride.ts(5,5): error TS1117: An object literal cannot have multiple properties with the same name.


==== memberOverride.ts (1 errors) ====
    // An object initialiser accepts the first definition for the same property with a different type signature
    // Should compile, since the second declaration of a overrides the first
    var x = {
        a: "", 
        a: 5
        ~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    
    var n: number = x.a;